k8s/web/web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      serviceAccountName: web-service-account
      containers:
        - name: web
          image: jellydock/floodrunner-web
          ports:
            - containerPort: 3000
          volumeMounts:
            #override floodrunner-web config.js file
            - name: config
              mountPath: "/usr/share/nginx/html/config.js"
              subPath: "config.js"
      terminationGracePeriodSeconds: 10
      volumes:
        - name: config
          configMap:
            name: web-config
            items:
              - key: "web.properties"
                path: "config.js"
