k8s/web/web-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 80 #port to receive traffic on
      targetPort: 3000 #port that container is listening on
